--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,8 +1,24 @@
+# FROM python:3.9
+# EXPOSE 8080
+# WORKDIR /opt/server
+# COPY payment.init .
+# COPY *py .
+# COPY requirements.txt .
+# RUN pip3 install -r requirements.txt
+# ENV CART_HOST="cart" \
+#     CART_PORT="8080" \
+#     USER_HOST="user" \
+#     USER_PORT="8080" \
+#     AMQP_HOST="rabbitmq" \
+#     AMQP_USER="roboshop" \
+#     AMQP_PASS="roboshop123"
+# CMD [ "uwsgi", "--ini", "payment.ini" ]
+
 FROM python:3.9
 EXPOSE 8080
 WORKDIR /opt/server
-COPY payment.init .
-COPY *py .
+COPY payment.ini .
+COPY *.py .
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 ENV CART_HOST="cart" \
@@ -12,4 +28,4 @@ ENV CART_HOST="cart" \
     AMQP_HOST="rabbitmq" \
     AMQP_USER="roboshop" \
     AMQP_PASS="roboshop123"
-CMD [ "uwsgi", "--ini", "payment.ini" ]
+CMD ["uwsgi","--ini","payment.ini"]
