--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -14,7 +14,7 @@ RUN addgroup -S roboshop && adduser -S roboshop -G roboshop && \
 EXPOSE 8080
 LABEL com.project="roboshop" \
       component="catalogue" \
-      created_by="sivakumar"
+      created_by="SURESH"
 ENV MONGO="true" \
     MONGO_URL="mongodb://mongodb:27017/catalogue"
 COPY --from=build --chown=roboshop:roboshop /opt/server /opt/server
